  When a new Alias is added this check box is switched off by default.
  Encryption and decryption is done using javax.crypto.


#394 Completion notification sound for long running SQLs.
  The panel indicating a running query now has a checkbox to play a completion notification sound.
  Next to the check box there's a button to configure sound notifications.


Bug fixes:

After Session start the Object tree once and again was empty.

#1409 Error connecting database because of "javax.crypto.IllegalBlockSizeException: Input length must be multiple of 8 when decrypting with padded cipher"
  The bug was introduced with feature #25 (Password encryption) and was contained in the last two or three snapshots before this fix.
  Users who already used feature #25 will have to reenter the passwords they chose to encrypt.

#1383 Table name not properly generated in result table right mouse menu functions "Copy as SQL INSERT-VALUES/UPDATE-SET statement"
  The former fix in version 4.0.0 for bug #1383 worked for the editor function "Create Data Script from SQL" only.




4.0.0 (09/09/2019)
==================

Enhancements:

"Alias Schema properties", Filter schemas by name --> Improved layout and tooltip.

New option in "Alias Schema properties": Filter schemas by name.
 See right mouse on Alias --> Alias properties --> tab Schemas --> third radio button.
  This feature was introduced especially for databases with very many Schemas.
  It may help to shorten SQuirreL's startup and shutdown time.
  If this feature is used the Schema table (on the same panel) should be cleared, too.

SQL result: Position of the active cell is displayed on the upper right of the result tab.

Improved Session startup and reload performance by reducing calls to Connection.getMetaData().getSchemas().

Recent files dialog has a new checkbox: "Show file preview".
  See menu Session --> File --> "Open recent or favourite file ..."

#580 Alias properties allows SQL LIKE syntax to configure schema loading: