@@ -1,0 +1,5 @@
+package net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree;
+
+public class ObjectTreeExpansionRestore
+{
+}
